--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,9 @@ body {
     font-weight: 900;
     width: 100px;
     padding: 5px auto;
-    margin: 10px auto;
     border-radius: 10px;
     font-size: 1.3rem;
+    font-family: 'Baumans', cursive;
 
 }
 
@@ -63,6 +63,7 @@ body {
     line-height: 3.5rem;
     font-size: 3.5rem;
     width: 20rem;
+    font-family: 'Baumans', cursive;
 }
 
 #answers {
@@ -80,7 +81,10 @@ h2, p {
     font-size: 1rem;
     text-align: center;
     padding-top: 1.5vh;
+    
 }
+
+
 
 
 
