--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
 #unitInput {
 
     height: 60%;
+    min-height: 300px;
     background: linear-gradient(#ED4800,#F38B17);
     color: #fff;
     display: flex;
